[tool.poetry]
name = "clone-client-sync"
version = "0.0.14"
description = "Synchronous wrapper for async clone_client"
authors = ["Clone Inc."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
clone-client = {git="https://github.com/clonerobotics/clone_client", tag="0.0.30"}
numpy = "^2.2.4"
scipy = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
